- Fixes spacing in cards view in find - Updates to Cordova

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -237,6 +237,7 @@ h5{
   padding-top: 0.5em;
   overflow:auto;
   height: 38vh;
+  padding-bottom:2em;
   .card{
     background: white;
     margin: 0 auto;
